--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
-    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="assets/style/style.css">
 </head>
 <body>
     <main>
         <header class="container-cabecario">
             <div class="logo">
-                <img src="imagem/logo (1).png" alt="logo">
+                <img src="assets/image/logo (1).png" alt="logo">
             </div>
             <ul>
                 <li><a href="#">Futuro</a></li>
@@ -22,7 +22,7 @@
         </header><!--Container-Cabeçario-->
 
         <aside>
-            <div class="incon-men">
+            <div class="icon-menu" onclick="abrirmenu()">
                 <span><ion-icon name="menu-outline"></ion-icon></span>
 
                 <div id="barra-menu">
@@ -50,15 +50,16 @@
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. <br> Optio molestiae dignissimos sunt corrupti quidem tempore totam veniam illum.</p>
 
                 <div class="cta">
-                    <button>Começe agora</button>
+                    <button id="btnteste" onclick="testejs()">Começe agora</button>
                 </div><!--Botão CTA-->
             </div>
             <div class="direita">
-                <img src="imagem/divLogo3.png" alt="">
+                <img src="assets/image/divLogo3.png" alt="">
             </div>
         </div>
     </main>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
