--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </header><!--Container-Cabeçario-->
 
         <aside>
-            <div class="icon-menu" onclick="abrirmenu()">
+            <div class="icon-menu" id="clicarMenu">
                 <span><ion-icon name="menu-outline"></ion-icon></span>
 
                 <div id="barra-menu">
