finalizando Landing Page

--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@
                 </div><!--Botão CTA-->
             </div>
             <div class="direita">
-                <img src="assets/image/divLogo3.png" alt="">
+                <img src="assets/image/imgDireita.png" alt="">
             </div>
         </div>
     </main>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-    <script src="index.js"></script>
+    <script src="assets/script/index.js"></script>
 </body>
 </html>
